crates/libretto-cli/tests/snapshots/snapshot_tests__audit_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Audit command help
---
Checks for security vulnerability advisories for installed packages

Usage: libretto audit [OPTIONS]

Options:
  -f, --format <FORMAT>    Output format (table, json) [default: table]
  -q, --quiet              Do not output any message
      --ansi               Force ANSI output (colors and formatting)
      --no-fail            Don't fail on vulnerabilities
      --abandoned          Only show abandoned packages
      --no-ansi            Disable ANSI output (colors and formatting)
      --locked             Only audit packages from composer.lock (don't resolve from composer.json)
  -n, --no-interaction     Do not ask any interactive question
      --profile            Display timing and memory usage information
      --suggest-versions   Suggest safe versions for vulnerable packages
      --no-plugins         Disables all plugins
      --no-scripts         Skips execution of scripts defined in composer.json
  -d, --working-dir <DIR>  Use the specified directory as working directory
      --no-cache           Prevent use of the cache
  -v, --verbose...         Increase the verbosity of messages: -v for verbose, -vv for very verbose,
                           -vvv for debug
  -h, --help               Print help
  -V, --version            Print version
