crates/libretto-cli/tests/snapshots/snapshot_tests__config_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Config command help
---
Sets config options. You can use -g to set global options

Usage: libretto config [OPTIONS] [KEY] [VALUE]

Arguments:
  [KEY]
          Setting name to get or set

  [VALUE]
          Value to set (omit to get current value)

Options:
  -g, --global
          Set config globally

  -q, --quiet
          Do not output any message

      --ansi
          Force ANSI output (colors and formatting)

  -l, --list
          List all config settings

      --no-ansi
          Disable ANSI output (colors and formatting)

      --unset
          Unset the config setting

  -e, --editor
          Edit config file in editor

  -n, --no-interaction
          Do not ask any interactive question

      --auth
          Merge with existing auth config

      --profile
          Display timing and memory usage information

  -a, --append
          Append to existing array values instead of overwriting

      --no-plugins
          Disables all plugins

      --absolute
          Output raw config value

      --no-scripts
          Skips execution of scripts defined in composer.json

  -d, --working-dir <DIR>
          Use the specified directory as working directory

      --no-cache
          Prevent use of the cache

      --format <FORMAT>
          Output format (text, json, or table)

          Possible values:
          - table: Human-readable table format
          - json:  JSON format
          - text:  Plain text format
          
          [default: text]

  -v, --verbose...
          Increase the verbosity of messages: -v for verbose, -vv for very verbose, -vvv for debug

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
