crates/libretto-cli/tests/snapshots/snapshot_tests__dump_autoload_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Dump-autoload command help
---
Regenerates the autoloader files

Usage: libretto dump-autoload [OPTIONS]

Options:
  -o, --optimize
          Optimize autoloader for production

  -q, --quiet
          Do not output any message

      --ansi
          Force ANSI output (colors and formatting)

  -c, --classmap-authoritative
          Convert PSR-0/PSR-4 to classmap

      --apcu
          `APCu` caching

      --no-ansi
          Disable ANSI output (colors and formatting)

  -n, --no-interaction
          Do not ask any interactive question

      --no-scripts
          Don't scan for classes

      --profile
          Display timing and memory usage information

      --no-plugins
          Disables all plugins

  -d, --working-dir <DIR>
          Use the specified directory as working directory

      --no-cache
          Prevent use of the cache

      --format <FORMAT>
          Output format (text, json, or table)

          Possible values:
          - table: Human-readable table format
          - json:  JSON format
          - text:  Plain text format
          
          [default: text]

  -v, --verbose...
          Increase the verbosity of messages: -v for verbose, -vv for very verbose, -vvv for debug

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
