crates/libretto-cli/tests/snapshots/snapshot_tests__error_no_composer_json.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Error when composer.json is missing
---
✘ No composer.json found in current directory.
Run 'libretto init' to create one.
