crates/libretto-cli/tests/snapshots/snapshot_tests__init_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Init command help
---
Creates a basic composer.json file in current directory

Usage: libretto init [OPTIONS]

Options:
      --name <NAME>
          Project name (vendor/name)

  -q, --quiet
          Do not output any message

      --ansi
          Force ANSI output (colors and formatting)

      --description <DESCRIPTION>
          Project description

      --author <AUTHOR>
          Author (name `<email>`)

      --no-ansi
          Disable ANSI output (colors and formatting)

  -n, --no-interaction
          Do not ask any interactive question

      --package-type <PACKAGE_TYPE>
          Package type
          
          [default: library]

  -l, --license <LICENSE>
          License
          
          [default: MIT]

      --profile
          Display timing and memory usage information

      --no-plugins
          Disables all plugins

      --stability <STABILITY>
          Minimum stability
          
          [default: stable]

      --no-scripts
          Skips execution of scripts defined in composer.json

  -d, --working-dir <DIR>
          Use the specified directory as working directory

      --no-cache
          Prevent use of the cache

      --format <FORMAT>
          Output format (text, json, or table)

          Possible values:
          - table: Human-readable table format
          - json:  JSON format
          - text:  Plain text format
          
          [default: text]

  -v, --verbose...
          Increase the verbosity of messages: -v for verbose, -vv for very verbose, -vvv for debug

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
