crates/libretto-cli/tests/snapshots/snapshot_tests__licenses_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Licenses command help
---
Shows information about licenses of dependencies

Usage: libretto licenses [OPTIONS]

Options:
  -f, --format <FORMAT>    Output format (text, json, summary) [default: text]
  -q, --quiet              Do not output any message
      --ansi               Force ANSI output (colors and formatting)
      --dev                Only show dev dependencies
      --no-ansi            Disable ANSI output (colors and formatting)
      --no-dev             Only show production dependencies
  -n, --no-interaction     Do not ask any interactive question
      --profile            Display timing and memory usage information
      --no-plugins         Disables all plugins
      --no-scripts         Skips execution of scripts defined in composer.json
  -d, --working-dir <DIR>  Use the specified directory as working directory
      --no-cache           Prevent use of the cache
  -v, --verbose...         Increase the verbosity of messages: -v for verbose, -vv for very verbose,
                           -vvv for debug
  -h, --help               Print help
  -V, --version            Print version
